# command-line-rust

catr/: Cargo.toml
catr/src/: lib.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: lib.rs
headr/: Cargo.toml
headr/src/: lib.rs
headr/tests/: cli.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs
wcr/: Cargo.toml
wcr/src/: lib.rs
