[package]
name = "findr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.4"
walkdir = "2.5.0"
regex = "1.10.4"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "2.1.5"
rand = "0.8.5"